fixing issues with spacing and alignment of the content.

--- a/mission/mission.css
+++ b/mission/mission.css
@@ -9,45 +9,59 @@ body {
     max-width: 800px;
     margin: 40px auto;
     padding: 60px;
-    border: 1px solid #aaa;
+    border: 1px solid black;
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 2.5em;
     text-align: center;
-
-}
-
-h2, p {
-    text-align: left;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    margin-bottom: 5px;
 }
 
 #school-name {
     color: #035f9c;
     font-size: 1em;
-    font-style: bold;
+    letter-spacing: 3px;
     text-align: center;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #9da0a3;
+    padding-bottom: 10px;
+    text-transform: uppercase;
+}
+
+#school-paragraph {
+    width: 90%;
+    margin: 0 auto 20px auto;
+    line-height: 1.6;
 }
 
 h2 {
     font-style: italic;
-    font-size: 1.25em;
+    font-size: 1.15em;
+    margin-top: 25px;
+    margin-bottom: 10px;
+    font-weight: normal;
 }
 
 
 .list {
     line-height: 1.5em;
-    margin: 0;
-    width: 80%;
+    margin: 0 auto;
+    width: 90%;
     list-style-type: decimal;
-    margin-bottom: 50px;
+    padding-left: 20px;
+    
+}
+
+li {
+    margin-bottom: 15px;
 
 }
 
-
-
 img {
-    width: 20%;
+    width: 120px;
     display: block;
-    margin: 0 auto;
+    margin: 40px auto 0 auto;
 }
